# voxelcraft

./: Cargo.toml  shader.spv  shader.wgsl
src/: main.rs  program.rs
src/program/: camera.rs  controller.rs  framecounter.rs  voxelbuffer.rs
