[package]
name = "voxelcraft"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.perf_profile]
inherits = "release"
debug = 2

[dependencies]
dashmap = "5.0"
winit = "0.26"
wgpu = "0.12"
pollster = "0.2"
log = "0.4"
simplelog = "0.11"
bytemuck = { version = "1.7", features = ["derive"] }
nalgebra = "0.30"
