[package]
name = "voxelcraft"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.perf_profile]
inherits = "release"
debug = 2

[dependencies]
dashmap = "5.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
wgpu = "0.18.0"
pollster = "0.3"
log = "0.4"
simplelog = "0.12"
bytemuck = { version = "1.7", features = ["derive"] }
nalgebra = "0.32"
rand = "0.8.5"
