[package]
name = "voxelcraft"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.perf_profile]
inherits = "release"
debug = 2

[dependencies]
dashmap = "6.1.0"
winit = { version = "0.30.5" }
wgpu = "22.1.0"
pollster = "0.3.0"
log = "0.4.22"
simplelog = "0.12.2"
bytemuck = { version = "1.18.0", features = ["derive"] }
nalgebra = "0.33.0"
rand = "0.8.5"
